Changes
--------

0.6.1 -Added cursor._last_executed for MySQLdb compatibility
      -Cursor.fetchall() and .fetchmany now return list, not tuple
      -Allow "length of auth-plugin-data" = 0
      -Cursor.connection references connection object without weakref

0.6   -Improved Py3k support
      -Improved PyPy support
      -Added IPv6 support
      -Added Thing2Literal for Django/MySQLdb compatibility
      -Removed errorhandler
      -Fixed GC errors
      -Improved test suite
      -Many bug fixes
      -Many performance improvements

0.4   -Miscellaneous bug fixes
      -Implementation of SSL support
      -Implementation of kill()
      -Cleaned up charset functionality
      -Fixed BIT type handling
      -Connections raise exceptions after they are close()'d
      -Full Py3k and unicode support

0.3   -Implemented most of the extended DBAPI 2.0 spec including callproc()
      -Fixed error handling to include the message from the server and support
       multiple protocol versions.
      -Implemented ping()
      -Implemented unicode support (probably needs better testing)
      -Removed DeprecationWarnings
      -Ran against the MySQLdb unit tests to check for bugs
      -Added support for client_flag, charset, sql_mode, read_default_file,
       use_unicode, cursorclass, init_command, and connect_timeout. 
      -Refactoring for some more compatibility with MySQLdb including a fake
       pymysql.version_info attribute.
      -Now runs with no warnings with the -3 command-line switch
      -Added test cases for all outstanding tickets and closed most of them.
      -Basic Jython support added.
      -Fixed empty result sets bug.
      -Integrated new unit tests and refactored the example into one.
      -Fixed bug with decimal conversion.
      -Fixed string encoding bug. Now unicode and binary data work!
      -Added very basic docstrings.

0.2   -Changed connection parameter name 'password' to 'passwd'