@@ -1,6 +1,8 @@
 Changes
 --------
 
+next  -Fix old password doesn't work on Python 3.
+
 0.6.1 -Added cursor._last_executed for MySQLdb compatibility
       -Cursor.fetchall() and .fetchmany now return list, not tuple
       -Allow "length of auth-plugin-data" = 0
